# recommender-case

./: .gitignore  README.md  buy-till-you-die-models-customer-lifetime-value.ipynb  main.py  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
case/: __init__.py  model_training.py  pre_processing.py  utils.py
data/preprocessed_data/: .part-00000-9d796f97-dc67-42f3-91b8-d2a95a024fc7-c000.snappy.parquet.crc  part-00000-9d796f97-dc67-42f3-91b8-d2a95a024fc7-c000.snappy.parquet
tests/: __init__.py  outlier_test.py
