[tool.poetry]
name = "case"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.5.1"
pyarrow = "^17.0.0"
lifetimes = "^0.11.3"
numpy = "1.23.5"
pandas = "^1.3.0"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
